# dog-bark-detector

./: CMakeLists.txt  README.md  classification_from_file.cpp  conanfile.py  create_spectrogram.c  network.cpp  network.hpp  spectrum.cpp  spectrum.h  window.cpp  window.h
